--- a/web/js/SOS/SOS.Styles.css
+++ b/web/js/SOS/SOS.Styles.css
@@ -65,6 +65,9 @@
 }
 
 .sos-control-section-container {
+  -moz-border-radius: 6px;
+  -webkit-border-radius: 6px;
+  border-radius: 6px;
   border: thin solid lightgray;
   padding: 1px;
 }
@@ -133,7 +136,7 @@ td.sos-table-highlight-selected {
 
 table.sos-table-scrollable {
   display: block;
-  width: 100%;
+  width: 760px;
   height: 305px;
   overflow: auto;
 }
@@ -183,6 +186,101 @@ table.sos-table-scrollable {
   padding: 0px;
   margin-left: 5px;
   margin-right: 2px;
+}
+
+.sos-info-box {
+  -moz-border-radius: 6px;
+  -webkit-border-radius: 6px;
+  border-radius: 6px;
+  background-color: #f2f5f7;
+  border: thin solid #aed0ea;
+  z-index: 1200;
+  filter: alpha(opacity=80);
+  opacity: 0.8;
+}
+
+.sos-info-box a {
+  text-decoration: none;
+}
+
+.sos-info-box a:hover {
+  text-decoration: underline;
+}
+
+.sos-info-box ul {
+  margin: 0px;
+  padding: 0px;
+  margin-left: 1.5em;
+}
+
+.sos-info-box-content {
+}
+
+.sos-info-box-control-section {
+  position: absolute;
+  -moz-border-radius: 6px 6px 0px 0px;
+  -webkit-border-radius: 6px 6px 0px 0px;
+  border-radius: 6px 6px 0px 0px;
+  top: -1px;
+  left: -1px;
+  width: 100%;
+  background-color: #d7ebf9;
+  border-left: thin solid #aed0ea;
+  border-right: thin solid #aed0ea;
+  border-top: thin solid #aed0ea;
+}
+
+.sos-info-box-control, .sos-info-box-control-left {
+  float: left;
+}
+
+.sos-info-box-control-right {
+  float: right;
+}
+
+.sos-info-box-control-section-title {
+  display: inline-block;
+  padding-left: 3px;
+}
+
+.sos-info-right-container {
+  width: 200px;
+  position: absolute;
+  top: 65px;
+  left: 1027px;
+}
+
+.sos-info-metadata-box {
+  padding: 5px;
+  padding-top: 20px;
+  font-size: 0.65em;
+  margin-bottom: 5px;
+}
+
+.sos-info-help-box {
+  padding: 5px;
+  padding-top: 20px;
+  font-size: 0.65em;
+}
+
+.sos-info-title-box {
+  position: absolute;
+  left: 250px;
+  padding: 5px;
+  padding-top: 20px;
+  width: 540px;
+  height: 40px;
+  font-size: 0.95em;
+}
+
+.sos-info-contact-box {
+  position: absolute;
+  left: 0px;
+  top: 310px;
+  width: 188px;
+  padding: 5px;
+  padding-top: 20px;
+  font-size: 0.65em;
 }
 
 .sos-app-container {
