Minor mods.  New plot option: forceSingleAxis.  This instructs the SOS.Plot object (& overview plots, such as for SOS.Table) to use a single y-axis (range, label etc.) even though there may be multiple data series.  For example, this is useful when plotting the min., mean & max. of a given observed property, but don't want three y-axes.

--- a/web/js/SOS/SOS.Styles.css
+++ b/web/js/SOS/SOS.Styles.css
@@ -25,6 +25,9 @@
   background: #ffffff;
   filter: alpha(opacity=80);
   opacity: 0.8;
+  -moz-border-radius: 6px;
+  -webkit-border-radius: 6px;
+  border-radius: 6px;
   border: thin solid grey;
   padding: 5px;
   z-index: 1200;
