Added a mechanism so that all observation data display components can consistently report diagnostic messages.  Now, if no data are available for the chosen date range, the component will report this fact, rather than producing an empty plot/table.

--- a/web/js/SOS/SOS.Styles.css
+++ b/web/js/SOS/SOS.Styles.css
@@ -84,6 +84,16 @@
   padding: 1px;
 }
 
+.sos-message-container {
+  margin-top: 10px;
+  padding: 0pt 0.7em;
+}
+
+.sos-message-icon {
+  float: left;
+  margin-right: 0.3em;
+}
+
 .sos-selected-interval-stats-table, .sos-embedded-table {
   font-size: 0.75em;
 }
