Bugfix.  https://github.com/52North/sos-js/issues/13.
The offering search autocomplete list appeared under the map, because its default z-index was 1.  We now add a CSS class to its parent (offering menu panel) with a z-index higher than the map default.

--- a/web/js/SOS/SOS.Styles.css
+++ b/web/js/SOS/SOS.Styles.css
@@ -198,6 +198,10 @@ table.sos-table-scrollable {
   width: 140px;
 }
 
+.sos-menu-search-box-container {
+  z-index: 1005;
+}
+
 .sos-menu-search-box {
   width: 132px;
 }
