Utility function to display arbitrary messages.
New SOS.Ui function displayMessage() will display the given text in a simply styled div.  In particular, the message can be formatted for errors/warnings by providing a (syslog-like) level object in the options argument.  This is the same mechanism currently used by plots/tables when no data are available for a given date range (see the formatMessage() function).  Also, if a duration (in ms) is given in the options argument, then the message box will be transient.

Examples:

// Simple message with default styling
var ctrl = ui.displayMessage("Loading...");
ctrl.bind("click", function() {ctrl.remove();});

// Error message with default jQuery UI error styling
var ctrl = ui.displayMessage("Error...", {level: {n: 3}});

// Warning message with default jQuery UI warning styling
var ctrl = ui.displayMessage("Warning...", {level: {n: 6}});

// Simple transient message with default styling (duration in ms)
var ctrl = ui.displayMessage("Loading...", {duration: 3000});

// Simple message with custom styling
var ctrl = ui.displayMessage("Loading...", {"class": "sos-message-box sos-message sos-message-loading"});

--- a/web/js/SOS/SOS.Styles.css
+++ b/web/js/SOS/SOS.Styles.css
@@ -109,6 +109,25 @@
   margin-right: 0.3em;
 }
 
+.sos-message-box {
+  background: #ffffff;
+  filter: alpha(opacity=80);
+  opacity: 0.8;
+  -moz-border-radius: 6px;
+  -webkit-border-radius: 6px;
+  border-radius: 6px;
+  border: thin solid lightgray;
+  padding: 5px;
+}
+
+.sos-message {
+  position: absolute;
+  top: 33%;
+  left: 33%;
+  width: 33%;
+  z-index: 1005;
+}
+
 .sos-selected-interval-stats-table, .sos-embedded-table {
   font-size: 0.75em;
 }
