Utility functions to add busy indicators to SOS components.
New SOS.Ui functions constructBusyIndicatorStartHandler() and constructBusyIndicatorEndHandler() to add busy indicator calls (see commit 8832c41108006280cb871809d430c977e9ba454a) to SOS components.

In particular, these functions are now used to show a busy indicator when a map's FOI layer is loading.  This can be controlled by setting the FOI layer option showBusyIndicatorOnLoad to either true (show) or false (don't show).  Also note that, if the user has already set custom loadstart/loadend handlers on a FOI layer, then setting showBusyIndicatorOnLoad to true will add a busy indicator after the user's custom event handler; it won't overwrite the custom handler.

Examples:

// Show a busy indicator when the FOI layer loads (this is the default)
map.setFeatureOfInterestLayerOptions({showBusyIndicatorOnLoad: true});

// Don't show a busy indicator when the FOI layer loads
map.setFeatureOfInterestLayerOptions({showBusyIndicatorOnLoad: false});

/* Create an additional FOI layer, with custom loadstart handler as well as
   a busy indicator */
var additionalFeatureOfInterestLayer = {
  object: null,
  id: "additionalFeatureOfInterestLayer",
  options: {
    // Set this layer initially unchecked in the layer switcher
    visibility: false,
    showBusyIndicatorOnLoad: true,
    label: "Additional Stations",
    pointStyle: new OpenLayers.Style(additionalPointStyleOptions),
    crs: {format: {xy: null}},
    displayLatestObservations: false,
    // Show additional FOIs on this layer
    foiFilter: this.showAdditionalFois,
    params: {
      // Provide guidance on quality of Additional data when first loaded
      eventListeners: {
        loadstart: this.additionalFoisInfo,
        scope: this
      }
    }
  }
};
map.config.featureOfInterestLayers.push(additionalFeatureOfInterestLayer);

--- a/web/js/SOS/SOS.Styles.css
+++ b/web/js/SOS/SOS.Styles.css
@@ -248,6 +248,7 @@ table.sos-table-scrollable {
 }
 
 .sos-map {
+  position: relative;        /* Required for use with sos-container-centre */
   width: 512px;
   height: 256px;
 }
