Mods. to SOS.Info to allow updated content to be highlighted.
New function SOS.Info.highlightContent() to allow the content to be transiently highlighted as it's updated, to draw the user's eye.

Examples:

/* Add the given class, fade in for 2 seconds, fade out for 2 seconds, then
   remove the given class and finally reinstate the content */
info.highlightContent(content, {"class": "ui-state-highlight", duration: 2000});

/* Transition to the given background colour, then back to the original colour,
   over a period of 2 seconds */
info.highlightContent(content, {backgroundColor: "#ffef8f", duration: 2000});

// This uses the same background colour, but gets it from the class
info.highlightContent(content, {backgroundColor: jQuery("<div/>", {"class": "ui-state-highlight"}).css("background-color"), duration: 2000});

--- a/web/js/SOS/SOS.Styles.css
+++ b/web/js/SOS/SOS.Styles.css
@@ -325,6 +325,12 @@ table.sos-table-scrollable {
 }
 
 .sos-info-box-content {
+  /* This covers the whole content area, including the rounded corners */
+  -moz-border-radius: 0px 0px 6px 6px;
+  -webkit-border-radius: 0px 0px 6px 6px;
+  border-radius: 0px 0px 6px 6px;
+  margin: -5px;
+  padding: 6px;
 }
 
 .sos-info-box-control-section {
