SOS.App now shows busy indicator when loading data from SOS.
The SOS.App now shows a busy indicator when fetching observation data from the SOS endpoint.  This is controlled via the showBusyIndicatorOnLoad option, which is set to true by default.  To turn this off, the following will suffice:

app.setAppOptions({showBusyIndicatorOnLoad: false});

--- a/web/js/SOS/SOS.Styles.css
+++ b/web/js/SOS/SOS.Styles.css
@@ -414,6 +414,13 @@ table.sos-table-scrollable {
   top: 5px;
 }
 
+/* This accounts for the sos-app class' left position, so that the busy
+   indicator is centred correctly */
+.sos-app-busy-indicator {
+  position: absolute;
+  left: -210px;
+}
+
 .sos-tab-header {
   font-size: 0.9em;
 }
