--- a/web/js/SOS/SOS.Styles.css
+++ b/web/js/SOS/SOS.Styles.css
@@ -152,7 +152,7 @@
 .sos-busy-indicator-box {
   position: absolute;
   top: 0; bottom: 0; left: 0; right: 0;
-  margin: auto;
+  margin: 0px;
   filter: alpha(opacity=80);
   opacity: 0.8;
   -moz-border-radius: 6px;
@@ -406,7 +406,7 @@ table.sos-table-scrollable {
 }
 
 .sos-app {
-  width: 80%;
+  width: 1011px;
   height: 600px;
   padding: 5px;
   position: absolute;
@@ -418,7 +418,8 @@ table.sos-table-scrollable {
    indicator is centred correctly */
 .sos-app-busy-indicator {
   position: absolute;
-  left: -210px;
+  top: -21px;
+  left: -150px;
 }
 
 .sos-app-message {
